--- a/portify-ui/portfolio.html
+++ b/portify-ui/portfolio.html
@@ -295,11 +295,14 @@
       // Load existing portfolio data
       async function loadExistingPortfolio(token) {
         try {
-          const response = await fetch("http://localhost:5000/api/portfolio", {
-            headers: {
-              Authorization: `Bearer ${token}`,
+          const response = await fetch(
+            "http://portify-api:5000/api/portfolio",
+            {
+              headers: {
+                Authorization: `Bearer ${token}`,
+              },
             },
-          });
+          );
 
           if (response.ok) {
             const existingPortfolio = await response.json();
@@ -1008,14 +1011,17 @@
         console.log("Sending data to backend:", data);
 
         try {
-          const response = await fetch("http://localhost:5000/api/portfolio", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-              Authorization: `Bearer ${token}`,
+          const response = await fetch(
+            "http://portify-api:5000/api/portfolio",
+            {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization: `Bearer ${token}`,
+              },
+              body: JSON.stringify(data),
             },
-            body: JSON.stringify(data),
-          });
+          );
 
           const result = await response.json();
 
